welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:5: error: not found: value move
move(nbPas, versLAvant)
^Program:5: error: not found: value versLAvant
move(nbPas, versLAvant)
            ^Program:6: error: not found: value versLAvant
  if (versLAvant) {
      ^