welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
var nbPas:Int
var verssLAvant:Boolean

move(nbPas, versLAvant)
  if (versLAvant) {
    avance(nbPas)
  }; else {
    recule(nbPas)
  }
